--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/three": "0.146.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "@react-three/drei": "9.34.4",
+    "@react-three/fiber": "8.8.10",
+    "@react-three/cannon": "6.5.2",
+    "three": "^0.146.0",
+    "prettier": "^2.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
