--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@react-three/fiber": "^8.13.4",
-    "@react-three/drei": "^9.78.1",
+    "@react-three/fiber": "^8.13.5",
+    "@react-three/drei": "^9.79.3",
     "@react-three/rapier": "^1.1.1",
     "leva": "^0.9.35",
     "r3f-perf": "^7.1.2",
@@ -21,16 +21,16 @@
   },
   "devDependencies": {
     "prettier": "^3.0.0",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "@types/three": "^0.154.0",
-    "eslint": "^8.44.0",
+    "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.0"
+    "vite": "^4.4.7"
   }
 }
