--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "leva": "^0.9.35",
     "r3f-perf": "^7.1.2",
     "three": "^0.159.0",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "simplex-noise": "^4.0.1"
   },
   "devDependencies": {
     "prettier": "^3.1.0",
